--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,13 +44,15 @@ dependencies {
     implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
     implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     implementation 'androidx.core:core-ktx:1.13.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.24"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.21'
     implementation 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-armeabi'
     implementation 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-armeabi-v7a'
     implementation 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-x86'
+//    implementation 'com.badlogicgames.gdx:gdx-platform:1.9.8:natives-x86_64'
     implementation 'com.badlogicgames.gdx:gdx-box2d-platform:1.9.8:natives-armeabi'
     implementation 'com.badlogicgames.gdx:gdx-box2d-platform:1.9.8:natives-armeabi-v7a'
     implementation 'com.badlogicgames.gdx:gdx-box2d-platform:1.9.8:natives-x86'
+//    implementation 'com.badlogicgames.gdx:gdx-box2d-platform:1.9.8:natives-x86_64'
     implementation 'com.github.kostasdrakonakis:android-navigator:1.2.6'
     kapt 'com.github.kostasdrakonakis:android-navigator-compiler:1.2.6'
 }
