--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.badlogicgames.gdx:gdx-box2d-platform:1.9.8:natives-x86'
     implementation 'com.github.kostasdrakonakis:android-navigator:1.2.6'
     kapt 'com.github.kostasdrakonakis:android-navigator-compiler:1.2.6'
+
+    implementation 'com.opencsv:opencsv:5.9'
 }
 
 
