--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,8 @@ dependencies {
     implementation 'com.github.kostasdrakonakis:android-navigator:1.2.6'
     kapt 'com.github.kostasdrakonakis:android-navigator-compiler:1.2.6'
 
-    implementation 'com.opencsv:opencsv:5.9'
+    // https://github.com/doyaaaaaken/kotlin-csv
+    implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:1.9.3'
 }
 
 
